表紙とセクションタイトル

--- a/latex/Template.tex
+++ b/latex/Template.tex
@@ -1,4 +1,5 @@
 \documentclass[a4j]{jarticle} %jsrticleでもいい
+\usepackage[utf8]{inputenc} % 文字コードをUTF-8に設定
 \usepackage{fancyhdr} %ヘッダーを表示させるのに必要
 %\usepackage{listings, jlisting} %ソースコードを貼り付けるのに必要
 \usepackage{listings} %ソースコードを貼り付けるのに必要
@@ -30,35 +31,18 @@
 }
 
 \pagestyle{fancy}
-  \lhead{メディア情報学プログラミング演習} %ヘッダー左
-  \rhead{J1-26} %ヘッダー右
+  \lhead{言語認知工学 最終レポート} %ヘッダー左
+  \rhead{2210259 米谷 祐希} %ヘッダー右
 \topmargin =-15mm %ページ上部の隙間の調整
 
-\title{令和6年度 メディア情報学プログラミング演習\\グループプログラミング レポート\\料理提供ゲーム「MiniCook」}
+\title{言語認知工学 最終レポート}
+\author{2210259 米谷 祐希}
+\date{\today} %\todayで今日の日付を取得
 \renewcommand{\lstlistingname}{コード}
 \begin{document}
 \maketitle
 
-\begin{center}%中央に表書く
-  \begin{tabular}{|c||c|}
-      \hline
-      学科&情報理工学域\\
-      \hline
-      クラス&J1\\
-      \hline
-      グループ番号&26\\
-      \hline
-      2210259&米谷祐希\\
-      \hline
-      2210730&鈴木早紀\\
-      \hline
-      2210743&吉田陽音\\
-      \hline
-  \end{tabular}
-\end{center}
-
-\newpage
-\section{概要説明}
+\section*{問1} %%%%%%%%%%%%%%%%%%%%
 \renewcommand{\labelenumi}{(\arabic{enumi})}
 \begin{enumerate}
 \item ×~単語 apple の意味を\underline{外界との対応付けで}推測・学習することは，記号接地の一例である．
@@ -69,10 +53,10 @@
 \item ◯
 \end{enumerate}
 
-\section{設計方針}
+\section*{問2}
 　単語doctorに対する、単語nurseによるプライミング効果は意味プライミングであるので、その効果を検証するための比較対象としては、プライミングを行わずに単にdoctorと示したり、全く関係ない語を示してdoctorの反応時間を測定し、比較すれば良い。
 
-\section{プログラムの説明}
+\section*{問3}
 　まず最初に
 \begin{equation}
   d_1^m = \frac{\partial E}{\partial z_1^m} = \frac{\partial E}{\partial a}\frac{\partial a}{\partial z_1^m}
@@ -93,13 +77,13 @@
 \end{align*}
 と導出できる。
 
-\section{実行例}
+\section*{問4}
 　リカレントネットワークは隠れ層の情報を保持して、次の処理へとつなげることができ、文章などの時間軸データとなったいるものに対して利点となっている。一方で、フィードフォワードネットワークは、実装がシンプルであり学習もリカレントネットワークでの勾配消失問題に対して軽減することができるという利点がある。さらに文章分類において、特徴抽出により固定長のベクトルにすることができる場合には、時系列データとして扱う必要がなくなるという点でフィードフォワードネットワークの効率に利点がある。
 
-\section{考察}
+\section*{問5}
 　意味空間モデルにおいて単語というのはベクトルで表される。そのベクトルというのは、その他の単語・文脈からどのように使われるか、再起頻度などによって計算されるものであり、Glenberg and Robertsonが言うように、人間の実世界での意味の認識・獲得の過程と対応付けられていないという点が問題である。例えば犬というものを想像したときに単語ベクトルの「犬」という単語は他の語とどんな関係性にあるという情報を持っているのみであり、実際に人間がふわふわして・小さい・動くもの、のような視覚的であったり感覚的な特徴情報を保持しているわけではないということである。
 
-\section{感想}
+\section*{問6}
 \subsection*{(1)}
 $v_{34}$は、文章$D_4$における、単語$w_3$の出現頻度を表している。
 \subsection*{(2)}
@@ -120,7 +104,7 @@ $v_{34}$は、段落、文、前後数単語のある範囲での、$w_3$と$w_4
 \end{align*}
 となる。
 
-\section{付録1}
+\section*{問7}
 \subsection*{(1)}
 　ノードの次数とは、そのノードの接合しているリンク数なので、次数が2次のものは\textbf{\underline{ a,b,e,f}}、である。
 \subsection*{(2)}
@@ -150,7 +134,7 @@ $v_{34}$は、段落、文、前後数単語のある範囲での、$w_3$と$w_4
   L = \dfrac{34}{21}
 \end{equation}
 となる。
-\section{付録2}
+\section*{問8}
 　第6章で扱っている評価方法の中で、これは順位付きの評価であるが、一度6つのすべてを対象として順位なしとして比較すると、どちらのプログラムも6個の出力の中に人間が連想した3つの連想語は含まれている。つまり再現率は100\%である。そして3つの連想後に対して6個の出力をしているので、適合率は50\%である。よって順位なしとして扱った場合の評価はどちらも同じである。\\
 　次に順位付きとしてみて、平均適合率を計算する。
 \subsection*{プログラムA}
