--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -69,7 +69,7 @@
   \item 料理の完成と提供\par
   　料理は、加工された食材とお皿を組み合わせることで完成する。それらを組み合わせて料理ができあがれば、提供口に置くことで提供となり、オーダーと一致しているか判定される。一致していれば加点、間違っていれば減点となる。   
 \end{enumerate}
-
+　また、ゲームは3画面に分かれており、スタート画面、ゲーム画面、リザルト画面がある。また、各画面や各動作にはBGMや効果音がついている。
 \section{設計方針}
 
 
