--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -69,8 +69,19 @@
   \item 料理の完成と提供\par
   　料理は、加工された食材とお皿を組み合わせることで完成する。それらを組み合わせて料理ができあがれば、提供口に置くことで提供となり、オーダーと一致しているか判定される。一致していれば加点、間違っていれば減点となる。   
 \end{enumerate}
-　また、ゲームは3画面に分かれており、スタート画面、ゲーム画面、リザルト画面がある。また、各画面や各動作にはBGMや効果音がついている。
+　また、ゲームは3画面に分かれており、スタート画面、ゲーム画面、リザルト画面がある。また、各画面や各動作にはBGMや効果音がついている。操作はキーボードのA,S,D,W,J,K,Spaceキーを用いている。\par
+　作業はGitHubを用い保存・共有を行った。米谷がModelと全体の管理、鈴木がView、吉田がControllerを主に担当したが、最終的には各自の担当領域を超えて協力しながら取り組んだ。
+
+
 \section{設計方針}
+　MVCモデルを用い設計した。図1にクラス図を示す。
+\begin{figure}[H]
+  \begin{center}
+  \includegraphics[scale=0.3]{img/class.png}
+  \caption{クラス図}
+  \end{center}
+\end{figure}
+
 
 
 \section{プログラムの説明}
