§2,4枠組み完成

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -8,6 +8,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{here}
 \usepackage{ascmac}
+\usepackage{subfigure}
 \setlength{\parindent}{0pt}
 \lstset{
   basicstyle={\ttfamily},
@@ -74,7 +75,7 @@
 
 
 \section{設計方針}
-　MVCモデルを用い設計した。図1にクラス図を示す。
+　図1にクラス図を示す。MVCモデルで設計した。
 \begin{figure}[H]
   \begin{center}
   \includegraphics[scale=0.3]{img/class.png}
@@ -88,6 +89,66 @@
 
 
 \section{実行例}
+\subsection*{スタート画面}
+
+\subsection*{リザルト画面}
+
+\begin{figure}[H]
+  \begin{center}
+    \subfigure[スタート画面]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+    \subfigure[リザルト画面]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+  \end{center}
+\end{figure}
+\subsection*{ゲーム画面：スタート時}
+
+\subsection*{ゲーム画面：オーダー}
+
+\subsection*{ゲーム画面：加工前}
+
+\subsection*{ゲーム画面：加工後}
+
+\subsection{ゲーム画面：組み合わせ後}
+
+\subsection{ゲーム画面：提供}
+
+
+
+\begin{figure}[H]
+  \begin{center}
+    \subfigure[ゲーム画面：スタート時]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+    \subfigure[ゲーム画面：オーダー]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+  \end{center}
+\end{figure}
+\begin{figure}[H]
+  \begin{center}
+    \subfigure[ゲーム画面：加工前]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+    \subfigure[ゲーム画面：加工後]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+  \end{center}
+\end{figure}
+\begin{figure}[H]
+  \begin{center}
+    \subfigure[ゲーム画面：組み合わせ後]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+    \subfigure[ゲーム画面：提供]{
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+    }
+  \end{center}
+\end{figure}
+
+
 
 
 \section{考察}
