§4枠組み完成

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -8,7 +8,7 @@
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{here}
 \usepackage{ascmac}
-\usepackage{subfigure}
+\usepackage{subfigure}%画像を横に配置
 \setlength{\parindent}{0pt}
 \lstset{
   basicstyle={\ttfamily},
@@ -61,7 +61,7 @@
 \newpage
 
 \section{概要説明}
-　このゲームは、レストランで働くプレイヤーが、制限時間内に料理を作るゲームである。以下の料理提供までの手順を繰り返すことでポイントを獲得し、制限時間終了時にスコアとレベルが表示される。
+　このゲームは、レストランで働くプレイヤーが、制限時間内に料理を作るゲームである。以下の料理提供までの手順を繰り返すことでポイントを獲得し、制限時間終了時にスコアとランクが表示される。
 \begin{enumerate}
   \item オーダーの確認\par
   　まず、画面上部にランダムにオーダーが提示される。オーダーには、使う食材と調理方法が記載されている。各オーダーにはそれぞれ制限時間が設定されており、残り時間はオーダー上のゲージにリアルタイムに表示される。
@@ -90,8 +90,21 @@
 
 \section{実行例}
 \subsection*{スタート画面}
-
+　実行すると始めにこの画面(a)が現れる。スタートボタンを押すとゲーム画面：スタート時(c)になる。
 \subsection*{リザルト画面}
+　ゲーム終了後はこのリザルト画面(b)になる。スコアによってランクが星の数で表される。
+\subsection*{ゲーム画面：スタート時}
+　スタート時の画面(c)では、食材などは何もなく、オーダーが1つ入るところから開始される。上部にはオーダー、中央にはゲーム部分、下部にはスコアと制限時間を表示している。
+\subsection*{ゲーム画面：オーダー}
+　画面上部のオーダー(d)では、完成品、必要な食材、加工方法、残り時間が示されている。
+\subsection*{ゲーム画面：加工前}
+　加工前の食材(e)をボックスから取り出す。
+\subsection*{ゲーム画面：加工後}
+　調理器具でアクションを行うと加工される。
+\subsection*{ゲーム画面：組み合わせ}
+　皿の上に各食材を載せると画像がそれに伴い完成品となる。
+\subsection*{ゲーム画面：提供}
+　完成した料理を提供口に置くと、ホールスタッフが取りに来る。
 
 \begin{figure}[H]
   \begin{center}
@@ -103,20 +116,6 @@
     }
   \end{center}
 \end{figure}
-\subsection*{ゲーム画面：スタート時}
-
-\subsection*{ゲーム画面：オーダー}
-
-\subsection*{ゲーム画面：加工前}
-
-\subsection*{ゲーム画面：加工後}
-
-\subsection{ゲーム画面：組み合わせ後}
-
-\subsection{ゲーム画面：提供}
-
-
-
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：スタート時]{
