--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -147,11 +147,8 @@
   \end{center}
 \end{figure}
 
-
-
-
 \section{考察}
-
+　予定していた以上のものが完成した。
 
 \section{感想}
 \subsection*{(米谷祐希)}
@@ -164,6 +161,57 @@
 
 \newpage
 \section*{付録1：操作マニュアル}
+\subsection*{(ストーリー)}
+　キミはレストランのキッチンで働いているぞ！制限時間内にオーダー通りの料理を作れ！目指せ高得点！！
+\subsection*{(実行方法)}
+　「Java MiniCook」でゲームが開始する。
+\subsection*{(操作方法)}
+　このゲームはキーボードでキャラクターを操作する。図2にキー操作を示す。W,S,A,Dで上下左右を操作し、Jで取る、Kで置く、スペースキーでアクションを行う。
+\begin{figure}[H]
+  \begin{center}
+  \includegraphics[scale=0.2]{img/key.png}
+  \caption{キーボード操作方法}
+  \end{center}
+\end{figure}
+\subsection*{(遊び方)}
+\begin{enumerate}
+  \item スタート\par
+  　スタートボタンを押すとゲームが開始する。 
+  \item オーダーの確認\par
+  　まず、画面上部にランダムにオーダーが提示される。オーダーには、使う食材と調理方法が記載されている。各オーダーにはそれぞれ制限時間が設定されており、残り時間はオーダー上のゲージにリアルタイムに表示される。
+  \item 食材の調理\par
+  　次に、オーダーに記載されている食材を、各食材ボックスから取り出す。各食材を持ったまま、各調理器具の前でアクションボタンを押すことで、食材が加工される。
+  \item 料理の完成と提供\par
+  　料理は、加工された食材とお皿を組み合わせることで完成する。それらを組み合わせて料理ができあがれば、提供口に置くことで提供となり、オーダーと一致しているか判定される。一致していれば加点、間違っていれば減点となる。   
+  \item リザルト\par
+  　制限時間がなくなるとリザルト画面に遷移する。スコアとランクが表示される。リザルトを押せばもう一度ゲームが開始する。
+\end{enumerate}
+\begin{itemize}
+  \item メニュー一覧\par
+    \begin{itemize}
+      \item マグロ握り
+      \item イカ握り
+      \item 海鮮丼
+      \item カッパ巻
+      \item 鉄火巻き
+      \item サラダ
+    \end{itemize}
+  \item 調理器具一覧\par
+    \begin{itemize}
+      \item 包丁
+      \item 鍋
+    \end{itemize}
+  \item 食材一覧\par
+    \begin{itemize}
+      \item マグロ
+      \item イカ
+      \item 米
+      \item 海苔
+      \item キャベツ
+      \item トマト
+      \item キュウリ
+    \end{itemize}     
+\end{itemize}
 
 
 
