--- a/latex/test.tex
+++ b/latex/test.tex
@@ -1,4 +1,20 @@
 \documentclass{article}
 \begin{document}
 Hello, LaTeX!!
+\begin{itemize}
+    \item 一つ目
+    \begin{itemize}
+      \item 入れ子一つ目
+      \begin{itemize}
+        \item 入れ子の入れ子一つ目
+        \begin{itemize}
+          \item 入れ子の入れ子の入れ子一つ目
+          \item 入れ子の入れ子の入れ子二つ目
+        \end{itemize}
+        \item 入れ子の入れ子二つ目
+      \end{itemize}
+      \item 入れ子二つ目
+    \end{itemize}
+    \item 二つ目
+  \end{itemize}
 \end{document}
