付録2長すぎる!

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -259,8 +259,10 @@
 \section*{付録2：プログラムリスト}
 以下にプログラムリスト全体を記述する。
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\small
 \lstset{
-  basicstyle=\ttfamily\tiny,
+  basicstyle=\ttfamily\footnotesize,
   numbers=left,%左に行番号
   numberstyle=\tiny,
   stepnumber=1, %行番号を毎行表示
@@ -268,12 +270,31 @@
   breaklines=true,%長い行を折り返す
   tabsize=4
 }
+\begin{itemize}
+  \item MiniCook
   \lstinputlisting{../MiniCook.java}
-
-
-
-
-
+  \item Model
+  \lstinputlisting{../Model.java} 
+  \item View
+  \lstinputlisting{../View.java} 
+  \item Controller
+  \lstinputlisting{../Controller.java}  
+  \item Order
+  \lstinputlisting{../Order.java}
+  \item Player
+  \lstinputlisting{../Player.java}
+  \item Start
+  \lstinputlisting{../Start.java}
+  \item Result
+  \lstinputlisting{../Result.java}
+  \item Meal
+  \lstinputlisting{../Meal.java}
+  \item Other
+  \lstinputlisting{../Other.java}
+  \item AudioManager
+  \lstinputlisting{../AudioManager.java} 
+\end{itemize}
+\normalsize
 
 \end{document}
 
