--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -175,7 +175,8 @@
 \subsection*{(米谷祐希)}
  %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{(鈴木早紀)}
- %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ 授業前半の個人の課題を最低限しか取り組まなかったために、2人よりJavaを理解していなくて2人に大変な部分を任せてしまいました。2人が進んで難しいところをやってくれたので感謝しています。画像・音楽の準備やメニューの追加、スライドやレポートは積極的に行えたと思います。2人のプログラムを参考にして理解を進めることができました。今回初めて本格的にグループプログラミングを行ったので、共同作業をする大変さや、作業を分割する便利さを知ることができました。Javaはこの授業で初めて触ったけれど、半年間という期間を考慮すると大きな成果が得られたなと感じます。
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{(吉田陽音)}
  %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -253,7 +254,7 @@
     frame=single, %枠
     tabsize=4 %タブの幅
 }
-\begin{itemize}%日本語のコメント正しく読み込めない...
+\begin{itemize}
   \item MiniCook
   \lstinputlisting{../MiniCook.java}
   \item Model
