4実行例調整

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -121,12 +121,12 @@
 \subsection*{ゲーム画面：加工前}
 　加工前の食材(e)をボックスから取り出す。
 \subsection*{ゲーム画面：加工後}
-　調理器具でアクションを行うと加工される。
+　調理器具でアクションを行うと加工後の画像(f)に切り替わる。
 \subsection*{ゲーム画面：組み合わせ}
-　皿の上に各食材を載せると画像がそれに伴い完成品となる。
+　皿の上に各食材を載せると画像がそれに伴い完成品(g)となる。
 \subsection*{ゲーム画面：提供}
-　完成した料理を提供口に置くと、ホールスタッフが取りに来る。
-
+　完成した料理を提供口に置くと、ホールスタッフが取りに来る(h)。
+\newpage
 \begin{figure}[H]
   \begin{center}
     \subfigure[スタート画面]{
@@ -167,6 +167,7 @@
     }
   \end{center}
 \end{figure}
+\newpage
 
 \section{考察}
 　予定していた以上のものが完成した。%%%%%%%%%%%%%%%%%%%%%%%
@@ -175,8 +176,15 @@
 \subsection*{(米谷祐希)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection*{(鈴木早紀)}
-　授業前半の個人の課題を最低限しか取り組まなかったために、2人よりJavaを理解していなくて2人に大変な部分を任せてしまいました。2人が進んで難しいところをやってくれたので感謝しています。画像・音楽の準備やメニューの追加、スライドやレポートは積極的に行えたと思います。2人のプログラムを参考にして理解を進めることができました。今回初めて本格的にグループプログラミングを行ったので、共同作業をする大変さや、作業を分割する便利さを知ることができました。Javaはこの授業で初めて触ったけれど、半年間という期間を考慮すると大きな成果が得られたなと感じます。
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+　授業前半の個人の課題を最低限しか取り組まなかったために、2人よりJavaを理解していなくて2人に大変な部分を任せてしまいました。
+2人が進んで難しいところをやってくれたので感謝しています。画像・音楽の準備やメニューの追加、スライドやレポートは積極的に行えたと思います。
+Viewとしての課題は、変数や画像読み込みが多すぎることで、今後食材やメニューの追加を行うときにもひたすらこれを書いていくのは厳しいと思います。
+せめて別ファイルにするなどして、View.java内はシンプルにする方が分かりやすいのかなと思いました。
+また、メニューによって食材や調理方法を指定するときは、分量が少なくなるようにif文の順序に工夫はしましたが、
+他の班の発表を聞き、csvファイルの読み込みにすることで管理もしやすくなるのかなと考えました。
+今回初めて本格的にグループプログラミングを行ったので、共同作業をする大変さや、作業を分割する便利さを知ることができました。
+先輩や2人のプログラムを特に参考にして理解を進めることができました。
+Javaはこの授業で初めて触ったけれど、半年間という期間を考慮すると大きな成果が得られたなと感じます。
 \subsection*{(吉田陽音)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
