4実行例画像貼った

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -130,40 +130,40 @@
 \begin{figure}[H]
   \begin{center}
     \subfigure[スタート画面]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/a.png}
     }
     \subfigure[リザルト画面]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/b.png}
     }
   \end{center}
 \end{figure}
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：スタート時]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/c.png}
     }
     \subfigure[ゲーム画面：オーダー]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/d2.png}
     }
   \end{center}
 \end{figure}
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：加工前]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/e.png}
     }
     \subfigure[ゲーム画面：加工後]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/f.png}
     }
   \end{center}
 \end{figure}
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：組み合わせ後]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/g.png}
     }
     \subfigure[ゲーム画面：提供]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/class.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/h.png}
     }
   \end{center}
 \end{figure}
