4実行例画像変更

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -150,20 +150,20 @@
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：加工前]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/e.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/e2.png}
     }
     \subfigure[ゲーム画面：加工後]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/f.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/f2.png}
     }
   \end{center}
 \end{figure}
 \begin{figure}[H]
   \begin{center}
     \subfigure[ゲーム画面：組み合わせ後]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/g.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/g2.png}
     }
     \subfigure[ゲーム画面：提供]{
-      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/h.png}
+      \includegraphics[width=0.4\textwidth,keepaspectratio]{img/h2.png}
     }
   \end{center}
 \end{figure}
