--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -56,13 +56,44 @@
 文責：鈴木
 
 \section{設計方針}
-　図1にクラス図を示す。MVCモデルで設計した。%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+　図1にクラス図を示す。%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}[H]
   \begin{center}
-  \includegraphics[scale=0.3]{img/class.png}
+  \includegraphics[width = 135mm]{img/class_graph.png}
   \caption{クラス図}
   \end{center}
 \end{figure}
+　クラス図に示しているように、MiniCookというクラスが大元のクラスとなっている。
+その中でインスタンスとして5つのクラスを保持している。
+Startクラス・Resultクラスはゲーム開始前の画面と、ゲーム終了時にスコアの表示等を行うためのクラスである。
+そして設計方針について、このゲームはプレイヤーがオーダーに従って各種料理をつくる。
+その中で、プレイヤーは皿や食材をいろんな座標に置くというプロセスが起きる。それに適応、そして拡張性を保つような構成にした。詳細に関しては以下で説明する。
+今回のプログラムは大量生産するインスタンスが存在しないという想定を最初の構想で予測したためObserverモデルは用いずに、基本的なMVCモデルを元にして作成した。
+\begin{itemize}
+  \item Model\par
+  　DrawModelクラスでは、各種データの管理とそれに伴ったメソッドの提供をおこなった。基本的にゲームの情報は各種クラスからModelに参照されて提供する。
+  Player,Gridなどの基盤にあるようなクラスはここでインスタンスを作成している。
+  \item View\par
+  　DrawViewでは、Modelクラスより取得した情報を元に一括で描画処理を行う。
+  フィールドのどの場所にどの物を描画するかの元情報をModelより取得。
+  その後その情報を元に画像をViewクラスのメソッドを用いて判定して、画像を選択・描画している。
+  当初の予定では、完全に2Dでゲームを作成する予定であったが、途中で擬似3Dにして立体感を出そうという構想が生まれた。
+  しかしViewモデルで一括で管理しているおかげで、プログラムの書き直しは最低限に抑えることができた。
+  \item Controller\par
+  　DrawControllerクラスでは、基本的にはプレイヤーからの入力の受取のみを行う。
+  それぞれキーボードの入力を受取、それに応じた動作をそれぞれのクラス内のメソッドでおこなってもらう。\\
+  　しかしゲームに動的なアニメーションを少し付ける都合でキー入力を行いたいときと行いたくないときがある。
+  それに対応するために、あるクラスのメソッドを呼び出すときもあれば、キー入力中にbooleanのフラグを用いて、動作先で参照してもらう形になっているものもある。
+  \item Player・Grid\par
+  　この2つのクラスは、このプログラムのいちばん重要なクラスである。
+  名称が違うもののプレイヤーが食材を保持している場合とあるマス目が食材を持っている(食材を置いている)という違いがあるのみで、ほとんど同じものである。
+  このクラスでは、そのマスないしはプレイヤーがなにを持っているかというクラスをインスタンス変数に保持している。そして、Playerに許された行動やGrid(マス目)によってできる。
+  行動についての自身の情報を持っており、それに対応したメソッドを提供している。
+  \item Order\par
+  　Orderクラスでは、画面上部に定期的なタイミングで出現する、提供しなければならない料理の情報を持っているクラスである。
+  注文1つごとにこのクラスが生成されて、その中にオーダーの制限時間、必要な材料などの情報をしている。
+  そして後に正誤判定を行う際の正誤処理のメソッドなどもこのOrderクラスが保持している。
+\end{itemize}
 文責：%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
