セクション2を書き終えた

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -92,9 +92,20 @@ Startクラス・Resultクラスはゲーム開始前の画面と、ゲーム終
   \item Order\par
   　Orderクラスでは、画面上部に定期的なタイミングで出現する、提供しなければならない料理の情報を持っているクラスである。
   注文1つごとにこのクラスが生成されて、その中にオーダーの制限時間、必要な材料などの情報をしている。
-  そして後に正誤判定を行う際の正誤処理のメソッドなどもこのOrderクラスが保持している。
+  \item Food\par
+  　このFoodクラスが、食材に関しての最小単位となるクラスである。抽象クラスという定義をしており、これを継承してキャベツであったり、トマトであったりのクラスを作成している。
+  それぞれ継承されたクラスにおいて。それぞれ特有の調理される方法や、調理された情報を保持することができる。これを複数個ミックスして料理となったものが後述するPlateクラスである。
+  \item Plate\par
+  　このPlateクラスでは、Foodクラスをいくつか保持していて、それによって例えばキャベツとトマトのサラダであったり、魚の切り身と海苔で巻き寿司といったものになる。
+  これがOrderに存在していれば正解、なければ不正解という形である。
+  また各マス目とPlayerはFoodクラスを単体で保持して食材を持っていたり、Plateクラスを持っていて、複数の食材からなる料理を持っていたりする。
+  なお正誤判定についてはOrderクラスで行わずこちらでOrderクラスの内容をModelを経由して取得して、自分との合致があるかどうかで行っている。
 \end{itemize}
-文責：%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+　クラス間の関係と全体の参照の流れを説明する。ほどんどの基本の流れはModelクラスを参照して行われる。
+ユーザーからの入力はDrawControllerからModelへ、描画はModelを参照してDrawVierクラスな内で行われる。
+プレイヤーは移動をして該当の場所に移動してアクションを行うことで、Foodクラスを新たに生成したり、その場においたり、またそれらを調理してまとめてPlateクラスに保持する。
+それを提出口に提出した際に、現存しているオーダーとの正誤判定を行いスコアのアップダウンを行う。ここでは説明を省略したが、各種タイミングでSEやBGMを鳴らすようなコードも含まれている。
+\\文責：米谷
 
 
 
