クラスの説明追加

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -82,20 +82,15 @@
      %%%%%%%%%%%%%%%%%%%%% 
   \end{itemize}   
   \item View\par
-   %%%%%%%%%%%%%%%%%%%%%%%%  
+  　このDrawViewクラスは、JPanelを継承した、描画処理用のクラスである。ゲームの基本画面やプレイヤー、食材、ツール、オーダー、ウェイターなどを描画する。
+  DrawModelを参照している。インスタンス変数としてmodel,cont,sizeなどを持つ。\par
+  　背景やプレイヤー、オーダー、UIなどの基本的なゲーム画面の描画についてはpaintComponentで行っている。ウェイター描画はaddWaiterで行っている。\par
+  　食材の描画でsetFoodImage、皿の描画でsetPlateImage,オーダーの描画でsetOederImageが用いられる。これら関数では、引数として情報を受け取ってそれに対して適切な画像を返す。その判断はif文やswitch文を用いているが、特に皿の上で食材を組み合わせた場合に、載っているべき食材を指定するだけでは、載っていないべき食材の有無に関わらず完成してしまう。そのため全ての食材の種類と加工の種類を指定しなければならないが毎行書くことは冗長で現実的ではない、ということに苦労した。
+  一気に食材を指定するのではなく、まず先に共通して使っていない食材をジャンルごとに指定し、そのジャンルのif文内で、持っている物持っていない物を指定することで文章量や比較を減らした。\par
+  文責：鈴木   
   \begin{itemize}
-    \item Timer\par
-     %%%%%%%%%%%%%%% 
-    \item Image\par
-     %%%%%%%%%%%%%%%%%%%%%%%%%
     \item Player\par
      %%%%%%%%%%%%%%%%%%%%%%%%%
-    \begin{itemize}
-      \item Plate\par
-       %%%%%%%%%%%%%%%%%%%%%%%%% 
-      \item Grid\par
-       %%%%%%%%%%%%%%%%%%%%% 
-    \end{itemize}   
   \end{itemize}  
   \item Controller\par
    %%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -128,7 +123,7 @@
 \subsection*{ゲーム画面：組み合わせ}
 　皿の上に各食材を載せると画像がそれに伴い完成品(g)となる。
 \subsection*{ゲーム画面：提供}
-　完成した料理を提供口に置くと、ホールスタッフが取りに来る(h)。
+　完成した料理を提供口に置くと、ウェイターが取りに来る(h)。
 \newpage
 \begin{figure}[H]
   \begin{center}
