--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -8,8 +8,15 @@
 \usepackage{here}
 \usepackage{ascmac}
 \usepackage{subfigure}%画像を横に配置
+\usepackage{fancybox}
 \setlength{\parindent}{0pt}
+\setlength{\oddsidemargin}{0mm}
+\setlength{\textwidth}{170mm} 
+\setlength{\topmargin}{-5mm}
+\setlength{\textheight}{240mm}
+\setlength{\columnsep}{8mm}
 
+\begin{comment}
 
 \pagestyle{fancy}
   \lhead{メディア情報学プログラミング演習} %ヘッダー左
@@ -22,7 +29,7 @@
 \maketitle
 
 \begin{center}%中央に表書く
-  \begin{tabular}{|c||c|}
+  \begin{tabular}{|c|c|}
       \hline
       学科&情報理工学域\\
       \hline
@@ -38,6 +45,44 @@
       \hline
   \end{tabular}
 \end{center}
+\end{comment}
+\pagestyle{fancy}
+  \lhead{メディア情報学プログラミング演習} %ヘッダー左
+  \rhead{J1-26} %ヘッダー右
+\topmargin =-15mm %ページ上部の隙間の調整
+\begin {document}
+\thispagestyle{empty}
+\begin{flushright}
+\begin{tabular}{|c|}\hline
+\hspace*{2cm} \\
+\hspace*{2cm} \\
+\hspace*{1.7cm} \\ \hline
+\end{tabular}\\
+{\huge\tt 2025-後学期}
+\end{flushright}
+\begin{center}
+\begin{Huge}
+{\bf 令和6年度メディア情報学プログラミング演習}\\
+\vspace{0.5cm}
+{\bf グループプログラミング レポート}\\
+\vspace{1.5cm}
+{\bf 料理提供ゲーム「MiniCook」}\\
+\vspace{5cm}
+
+\begin{tabular}{|c|c|}\hline
+学科&情報理工学域\\ \hline
+クラス&  J1    \\ \hline
+グループ番号& 26 \\ \hline
+2210259& 米谷 祐希 \\ \hline
+2210730& 鈴木 早紀 \\ \hline
+2210743& 吉田 陽音 \\ \hline
+\end{tabular}
+\end{Huge}
+\end{center}
+
+
+
+
 
 \newpage
 
