--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -30,11 +30,11 @@
       \hline
       グループ番号&26\\
       \hline
-      2210259&米谷~祐希\\
+      2210259&米谷\ 祐希\\
       \hline
-      2210730&鈴木~早紀\\
+      2210730&鈴木\ 早紀\\
       \hline
-      2210743&吉田~陽音\\
+      2210743&吉田\ 陽音\\
       \hline
   \end{tabular}
 \end{center}
@@ -114,12 +114,31 @@ Startクラス・Resultクラスはゲーム開始前の画面と、ゲーム終
 　以下にクラスとその説明を示す。
 \begin{itemize}
   \item MiniCook\par
-   %%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  　このクラスでは、まず最初にMVCモデルの各種クラスを生成する。そして各種クラスの中にある、getter,setterを利用してそれぞれのクラスを連携させる。
+  それに加えてオーディオの管理のクラスを生成したして、JFrameを用いてウィンドウを立ち上げる。
+  \\　このインスタンスメソッドとしてスタート画面からゲームが画面に切り替えるstartGame()であったり、リザルト画面に切り替えるshowResult()というメソッド等を持っている。
+  public~static~void~main()は個々で宣言がしてあるため、このゲームは java MiniCookでスタートする。
+  \\文責~:~米谷
   \item Model\par
-   %%%%%%%%%%%%%%%%%%%%%%%%%%%
+  　前の章でも少し触れたが、このクラスではゲームに関する基本的なデータを持っている。
+  インスタンス変数にGridクラス、Playerクラス、orderを入れる配列、制限時間を入れる変数などを持つ。
+  MiniCookクラスより、自身が生成されたとき、Gridと呼ばれる各マスのついての2次元配列を作成してそれをフィールドとしている。
+  コンストラクタのその後は、フィールドの壁や障害物、食材を加工できるツールますであるかという情報を、Gridの変数を変更していくことによって設定していく。
+  基本的な動作はModelを経由して行われるようななっており、例えばplayerの移動は一旦Model.movePlayer()が呼ばれた後に、その中でplayer.move()を呼ぶことでカプセル化をより厳密なものにしている。
+  またorderの生成を行うgenerateOrder()メソッドもここにあり、登録されている料理からランダムなものを生成して、それらのセッティングをしてオーダーを作っている。
+  そのほかにも、オーダーを削除するremoveOrder()、スコアの増減に関するscoreUP(),scoreDown()などのインスタンス・メソッドを持っている。
+  \\文責~:~米谷
+  \item Grid\par
+  　Gridクラスは各マス目1マスについてのクラスである。この集合を配列に保持してModelでインスタンス変数に持ってもらう。
+  今回の設計として、あるマスにがあるときはそのグリッドが食材を持っているということになっている。
+  つまりGridがFoodクラスやPlateクラスのオブジェクトを持つということである。
+  そしてそれに伴ったインスタンス変数を作成してそこに代入している。
+  \item 
+  \item Player\par
   \begin{itemize}
     \item Food\par
     　このFoodクラスは、料理の食材を表現するための抽象クラスである。インスタンス変数として、食材の状態を整数値で表現するためのfoodStatu、それぞれの調理法が可能かどうかを示すフラグであるcanCut、canHeat、食材が皿の上にあるかどうかを示すフラグisPlate、食材の名前を保持するための文字列foodNameを持つ。コンストラクタでは継承した子クラスの食材に併せて初期化が行えるように実装している。
+    
 
     文責：吉田
     \item Order\par
@@ -142,10 +161,6 @@ Startクラス・Resultクラスはゲーム開始前の画面と、ゲーム終
   　食材の描画でsetFoodImage、皿の描画でsetPlateImage,オーダーの描画でsetOederImageが用いられる。これら関数では、引数として情報を受け取ってそれに対して適切な画像を返す。その判断はif文やswitch文を用いているが、特に皿の上で食材を組み合わせた場合に、載っているべき食材を指定するだけでは、載っていないべき食材の有無に関わらず完成してしまう。そのため全ての食材の種類と加工の種類を指定しなければならないが毎行書くことは冗長で現実的ではない、ということに苦労した。
   一気に食材を指定するのではなく、まず先に共通して使っていない食材をジャンルごとに指定し、そのジャンルのif文内で、持っている物持っていない物を指定することで文章量や比較を減らした。\par
   文責：鈴木   
-  \begin{itemize}
-    \item Player\par
-     %%%%%%%%%%%%%%%%%%%%%%%%%
-  \end{itemize}  
   \item Controller\par
    %%%%%%%%%%%%%%%%%%%%%%%%%%% 
   \item Start\par
