余白を調整して完成しました

--- a/latex/MiniCook.tex
+++ b/latex/MiniCook.tex
@@ -10,8 +10,8 @@
 \usepackage{subfigure}%画像を横に配置
 \usepackage{fancybox}
 \setlength{\parindent}{0pt}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\textwidth}{170mm} 
+\setlength{\oddsidemargin}{3mm}
+\setlength{\textwidth}{153mm} %右と左の余白を合わせるために
 \setlength{\topmargin}{-5mm}
 \setlength{\textheight}{240mm}
 \setlength{\columnsep}{8mm}
@@ -62,7 +62,7 @@
 \end{flushright}
 \begin{center}
 \begin{Huge}
-{\bf 令和6年度メディア情報学プログラミング演習}\\
+{\bf 令和6年度メディア情報学\\プログラミング演習}\\
 \vspace{0.5cm}
 {\bf グループプログラミング レポート}\\
 \vspace{1.5cm}
